Finish AST, start working on PrintVisitor
Signed-off-by: Earthbert <daraban_timotei@tutanota.com>