@@ -5,8 +5,6 @@ import cool.parser.CoolParserBaseVisitor;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-
 import cool.parser.CoolParser.*;
 import cool.ast.nodes.*;
 
@@ -14,26 +12,35 @@ public class ASTBuilderVisitor extends CoolParserBaseVisitor<ASTNode> {
 
 	@Override
 	public ASTNode visitProgram(ProgramContext ctx) {
-		return new ASTRoot(ctx.class_().stream().map(this::visit).collect(Collectors.toList()));
+		return new ASTRoot(ctx.class_().stream().map(this::visit).toList());
 	}
 
 	@Override
 	public ASTNode visitClass(ClassContext ctx) {
-		System.out.println(ctx.children);
-		return new ASTClass(ctx.start, new ASTType(ctx.name),
+		return new ASTClass(ctx.CLASS().getSymbol(), new ASTType(ctx.name),
 				ctx.parent == null ? Optional.empty() : Optional.of(new ASTType(ctx.parent)),
-				ctx.feature().stream().map(this::visit).collect(Collectors.toList()), ctx);
+				ctx.feature().stream().map(this::visit).toList(), ctx);
 	}
 
 	@Override
 	public ASTNode visitDef(DefContext ctx) {
 		return new ASTDef(ctx.start, new ASTId(ctx.ID().getSymbol()),
-				new ASTType(ctx.type), (ASTExpression) visit(ctx.expr()));
+				new ASTType(ctx.type),
+				ctx.expr() == null ? Optional.empty() : Optional.of((ASTExpression) visit(ctx.expr())));
 	}
 
 	@Override
 	public ASTNode visitMethod(MethodContext ctx) {
-		return super.visitMethod(ctx);
+		return new ASTMethod(ctx.start, new ASTId(ctx.name),
+				new ASTType(ctx.type),
+				ctx.formal().stream().map(this::visit).map(ASTFormal.class::cast).toList(),
+				(ASTExpression) visit(ctx.expr()));
+	}
+
+	@Override
+	public ASTNode visitFormal(FormalContext ctx) {
+		return new ASTFormal(ctx.start, new ASTId(ctx.ID().getSymbol()),
+				new ASTType(ctx.TYPE().getSymbol()));
 	}
 
 	@Override
@@ -61,23 +68,82 @@ public class ASTBuilderVisitor extends CoolParserBaseVisitor<ASTNode> {
 
 	@Override
 	public ASTNode visitIf(IfContext ctx) {
-		return new ASTIf(ctx.start, (ASTExpression) visit(ctx.cond), (ASTExpression) visit(ctx.thenBr),
+		return new ASTIf(ctx.IF().getSymbol(), (ASTExpression) visit(ctx.cond), (ASTExpression) visit(ctx.thenBr),
 				(ASTExpression) visit(ctx.elseBr));
 	}
 
 	@Override
 	public ASTNode visitWhile(WhileContext ctx) {
-		return new ASTWhile(ctx.start, (ASTExpression) visit(ctx.cond), (ASTExpression) visit(ctx.body));
+		return new ASTWhile(ctx.WHILE().getSymbol(), (ASTExpression) visit(ctx.cond), (ASTExpression) visit(ctx.body));
 	}
 
 	@Override
 	public ASTNode visitLet(LetContext ctx) {
 		List<DefContext> defs = ctx.def();
 		Collections.reverse(defs);
-		ASTLet acc = new ASTLet(ctx.start, (ASTDef) visit(defs.get(0)), (ASTExpression) visit(ctx.expr()));
+		ASTLet acc = new ASTLet(ctx.LET().getSymbol(), (ASTDef) visit(defs.get(0)),
+				(ASTExpression) visit(ctx.expr()));
 
-		defs.stream().skip(1).forEachOrdered((def) -> new ASTLet(ctx.start, (ASTDef) visit(def), (ASTExpression) acc));
+		defs.stream().skip(1).forEachOrdered((def) -> new ASTLet(ctx.start, (ASTDef) visit(def),
+				(ASTExpression) acc));
 
 		return acc;
+	}
+
+	@Override
+	public ASTNode visitCase(CaseContext ctx) {
+		return new ASTCase(ctx.CASE().getSymbol(), (ASTExpression) visit(ctx.value),
+				ctx.type.stream().map(ASTType::new).toList(),
+				ctx.id.stream().map(ASTId::new).toList(),
+				ctx.branch.stream().map(this::visit).map(ASTExpression.class::cast).toList());
+	}
+
+	@Override
+	public ASTNode visitBlock(BlockContext ctx) {
+		return new ASTBlock(ctx.start,
+				ctx.expr().stream().map(this::visit).map(ASTExpression.class::cast).toList());
+	}
+
+	@Override
+	public ASTNode visitPar(ParContext ctx) {
+		return visit(ctx.expr());
+	}
+
+	@Override
+	public ASTNode visitAssign(AssignContext ctx) {
+		return new ASTAssignment(ctx.ASSIGN().getSymbol(), new ASTId(ctx.ID().getSymbol()),
+				(ASTExpression) visit(ctx.expr()));
+	}
+
+	@Override
+	public ASTNode visitArtihmetic(ArtihmeticContext ctx) {
+		return new ASTArithmetic(ctx.op, (ASTExpression) visit(ctx.left),
+				(ASTExpression) visit(ctx.right));
+	}
+
+	@Override
+	public ASTNode visitComparison(ComparisonContext ctx) {
+		return new ASTComparison(ctx.op, (ASTExpression) visit(ctx.left),
+				(ASTExpression) visit(ctx.right));
+	}
+
+	@Override
+	public ASTNode visitNew(NewContext ctx) {
+		return new ASTNew(ctx.NEW().getSymbol(), new ASTType(ctx.TYPE().getSymbol()));
+	}
+
+	@Override
+	public ASTNode visitThisCall(ThisCallContext ctx) {
+		return new ASTCall(ctx.ID().getSymbol(), new ASTId(ctx.ID().getSymbol()), Optional.empty(),
+				ctx.AT() == null ? Optional.empty() : Optional.of(new ASTType(ctx.TYPE().getSymbol())),
+				ctx.expr().stream().map(this::visit).map(ASTExpression.class::cast).toList());
+	}
+
+	@Override
+	public ASTNode visitMethodCall(MethodCallContext ctx) {
+		return new ASTCall(ctx.ID().getSymbol(), new ASTId(ctx.ID().getSymbol()),
+				Optional.of((ASTExpression) visit(ctx.object)),
+				ctx.AT() == null ? Optional.empty() : Optional.of(new ASTType(ctx.TYPE().getSymbol())),
+				ctx.expr().stream().map(this::visit).map(ASTExpression.class::cast).toList());
 	}
 }
